fix some CSS with overlaps of navbar

--- a/styles.css
+++ b/styles.css
@@ -85,9 +85,6 @@ nav {
 }
 
 .search-container {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
     display: flex;
     align-items: center;
 }
